renamed namespace, added signalr

--- a/web/Pages/_ViewImports.cshtml
+++ b/web/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using entrusted.web
-@namespace entrusted.web.Pages
+@using Entrusted.Web
+@namespace Entrusted.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
