--- a/web/ClientApp/src/styles.css
+++ b/web/ClientApp/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+.en-bg-primary {
+  background-color: #0286C5;
+}
+
+html{
+  height: 100%;
+}
+
+body{
+  height: 100%;
+}
