--- a/web/ClientApp/src/app/customers/customers.component.html
+++ b/web/ClientApp/src/app/customers/customers.component.html
@@ -1,17 +1,13 @@
+<div class="view-header">
+  <span class="mx-1">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+      <path d="M12 2c2.757 0 5 2.243 5 5.001 0 2.756-2.243 5-5 5s-5-2.244-5-5c0-2.758 2.243-5.001 5-5.001zm0-2c-3.866 0-7 3.134-7 7.001 0 3.865 3.134 7 7 7s7-3.135 7-7c0-3.867-3.134-7.001-7-7.001zm6.369 13.353c-.497.498-1.057.931-1.658 1.302 2.872 1.874 4.378 5.083 4.972 7.346h-19.387c.572-2.29 2.058-5.503 4.973-7.358-.603-.374-1.162-.811-1.658-1.312-4.258 3.072-5.611 8.506-5.611 10.669h24c0-2.142-1.44-7.557-5.631-10.647z" />
+    </svg>
+  </span>
+  <h4>People</h4>
+</div>
 <div class="accordion" id="customer-accordion">
-  <div class="card" *ngFor="let customer of customers; let i = index;">
-    <a class="card-header" data-toggle="collapse" role="button" href="#collapse-{{i}}" aria-expanded="false">
-      <div class="col-6">
-        <h5 class="m-0">{{customer.givenName}} {{customer.familyName}}</h5>
-      </div>
-    </a>
-    <div id="collapse-{{i}}" class="collapse" aria-labelledby="headingOne" data-parent="#customer-accordion">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-  <div class="card text-center">
-    <label>bottom</label>
-  </div>
+  <app-customer *ngFor="let customer of customers; let i = index; let isFirst = first" [index]="i" [isFirst]="isFirst"
+    [customer]="customer">
+  </app-customer>
 </div>
