changed bd color

--- a/web/ClientApp/src/styles.css
+++ b/web/ClientApp/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 .en-bg-primary {
-  background-color: #0286C5;
+  background-color: #8302c5f5;
 }
 
 html{
