--- a/web/ClientApp/src/app/customer/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer.component.html
@@ -31,12 +31,12 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="address-one-{{i}}" class="font-weight-bold">Street Address 1</label>
+          <label for="address-one-{{i}}" class="font-weight-bold">Full Address</label>
           <input id="address-one-{{i}}" type="text" class="form-control" value="{{customer.addressOne}}" />
         </div>
         <div class="form-group">
-          <label for="address-two-{{i}}" class="font-weight-bold">Street Address 2</label>
-          <input id="address-two-{{i}}" type="text" class="form-control" value="{{customer.addressTwo}}" />
+          <label for="phone-{{i}}" class="font-weight-bold">Phone</label>
+          <input id="phone-{{i}}" prefix="+1 " mask="(000) 000-0000" matinput type="tel" class="form-control" value="{{customer.phone}}" />
         </div>
         <div class="form-group row">
           <div class="col-5">
