--- a/web/ClientApp/src/app/customer/customer-component/customer.component.css
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.css
@@ -11,10 +11,6 @@
     color: rgba(0, 0, 0, 0.788);
 }
 
-.accordion .card:last-of-type{
-    border: 1px solid rgba(0, 0, 0, 0.486);
-}
-
 .customer-action {
     background: none;
     border: none;
@@ -31,5 +27,5 @@
 
 
 .card-body{
-    background-color: #0087c057;
+    background-color: none;
 }
