--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -4,20 +4,11 @@
       <a data-toggle="collapse" role="button" href="#collapse-{{index}}" aria-expanded="false">
         <h5 class="m-0">{{formCustomer.givenName}} {{formCustomer.familyName}}</h5>
       </a>
-      <button class="customer-action float-right">
-        <img src="/assets/iconmonstr-trash-can-1.svg" />
+      <button [appIcon]="deleteIcon" class="user-action float-right">
       </button>
-      <button class="customer-action float-right">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <path [attr.fill]="true ? 'red' : 'grey'"
-            d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z" />
-        </svg>
+      <button [appIcon]="cancelIcon" class="user-action float-right">
       </button>
-      <button class="customer-action float-right">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <path [attr.fill]="true ? 'green' : 'grey'"
-            d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z" />
-        </svg>
+      <button [appIcon]="acceptIcon" class="user-action float-right">
       </button>
     </div>
     <div id="collapse-{{index}}" class="collapse" [ngClass]="{'show': isFirst}" aria-labelledby="headingOne"
