--- a/web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand font-weight-bold" [routerLink]='["/"]'><span class='text-white mr-2'>Entrusted</span><span>CRM</span></a>
       <div class='search-container'>
         <button class="search-btn"></button>
-        <input type="text" class="search-input" aria-label="customer search" placeholder="first:  last:  city:  state:  zip:  like first:John" />
+        <input type="text" class="search-input" aria-label="customer search" placeholder="first:  last:  address:  like first:John" />
       </div>
     </div>
   </nav>
