--- a/web/ClientApp/src/app/customer/customer-component/customer.component.css
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.css
@@ -14,3 +14,12 @@
 .card-body{
     background-color: none;
 }
+
+label{
+    font-weight: 100;
+}
+
+.form-control {
+    border: none;
+    font-weight: 400;
+}
