--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -16,26 +16,31 @@
       <div class="card-body">
         <div class="form-group row">
           <div class="col-6">
-            <label class="font-weight-bold">First Name</label>
-            <input type="text" class="form-control" value="{{formCustomer.givenName}}" />
+            <div class="app-form-section">
+              <label>First Name</label>
+              <input type="text" class="form-control app-font-color-attention" value="{{formCustomer.givenName}}" />
+            </div>
           </div>
           <div class="col-6">
-            <label class="font-weight-bold">Last Name</label>
-            <input type="text" class="form-control" value="{{formCustomer.familyName}}" />
+            <div class="app-form-section">
+              <label>Last Name</label>
+              <input type="text" class="form-control app-font-color-attention" value="{{formCustomer.familyName}}" />
+            </div>
           </div>
         </div>
-        <div class="form-group">
-          <label for="address-one-{{i}}" class="font-weight-bold">Full Address</label>
-          <input id="address-one-{{i}}" type="text" class="form-control" value="{{formCustomer.addressOne}}" />
+        <div class="form-group app-form-section">
+          <label for="address-one-{{i}}">Full Address</label>
+          <input id="address-one-{{i}}" type="text" class="form-control app-font-color-attention" value="{{formCustomer.addressOne}}" />
         </div>
-        <div class="form-group">
-          <label for="phone-{{i}}" class="font-weight-bold">Phone</label>
+        <div class="form-group app-form-section">
+          <label for="phone-{{i}}">Phone</label>
           <input id="phone-{{i}}" name="phone" prefix="+1 " mask="(000) 000-0000" matinput type="tel"
-            class="form-control" [(ngModel)]="formCustomer.phone" />
+            class="form-control app-font-color-attention" [(ngModel)]="formCustomer.phone" />
         </div>
+        <hr>
         <div class="form-group row">
           <div class="col-12">
-            <label class="font-weight-bold">Notes</label>
+            <label>Notes</label>
             <app-customer-note [customerKey]="formCustomer.key"></app-customer-note>
           </div>
         </div>
