--- a/web/ClientApp/src/styles.css
+++ b/web/ClientApp/src/styles.css
@@ -3,6 +3,10 @@
   background-color: #8302c5f5;
 }
 
+.app-font-color-attention{
+  color: #735CDD;
+}
+
 html{
   height: 100%;
 }
@@ -22,4 +26,9 @@ body{
 
 .user-action:focus {
   outline: none;    
+}
+
+.app-form-section {
+  box-shadow: 1px 1px 2px lightslategrey;
+  padding: 1rem;
 }
