--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group app-form-section">
           <label for="address-one-{{i}}">Full Address</label>
-          <input id="address-one-{{i}}" type="text" class="form-control app-font-color-attention" value="{{formCustomer.addressOne}}" />
+          <input id="address-one-{{i}}" type="text" class="form-control app-font-color-attention" value="{{formCustomer.address}}" />
         </div>
         <div class="form-group app-form-section">
           <label for="phone-{{i}}">Phone</label>
