--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -11,7 +11,7 @@
       <button [appIcon]="acceptIcon" class="user-action float-right">
       </button>
     </div>
-    <div id="collapse-{{index}}" class="collapse" [ngClass]="{'show': isFirst}" aria-labelledby="headingOne"
+    <div id="collapse-{{index}}" class="collapse" aria-labelledby="headingOne"
       data-parent="#customer-accordion">
       <div class="card-body">
         <div class="form-group row">
