--- a/web/ClientApp/src/styles.css
+++ b/web/ClientApp/src/styles.css
@@ -29,6 +29,6 @@ body{
 }
 
 .app-form-section {
-  box-shadow: 1px 1px 2px lightslategrey;
+  box-shadow: 1px 1px 1px 1px lightslategrey;
   padding: 1rem;
 }
