--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -11,31 +11,45 @@
       <button [appIcon]="acceptIcon" class="user-action float-right">
       </button>
     </div>
-    <div id="collapse-{{index}}" class="collapse" aria-labelledby="headingOne"
-      data-parent="#customer-accordion">
+    <div id="collapse-{{index}}" class="collapse" aria-labelledby="headingOne" data-parent="#customer-accordion">
       <div class="card-body">
         <div class="form-group row">
-          <div class="col-6">
+          <div class="col-4">
             <div class="app-form-section">
               <label>First Name</label>
               <input type="text" class="form-control app-font-color-attention" value="{{formCustomer.givenName}}" />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-4">
             <div class="app-form-section">
               <label>Last Name</label>
               <input type="text" class="form-control app-font-color-attention" value="{{formCustomer.familyName}}" />
             </div>
           </div>
+          <div class="col-4">
+            <div class="app-form-section">
+              <label>Status</label>
+              <select class="form-control app-font-color-attention" [(ngModel)]="formCustomer.status" name="customerStatus">
+                <option *ngFor="let status of statuses" [value]="status">{{status}}</option>
+              </select>
+            </div>
+          </div>
         </div>
-        <div class="form-group app-form-section">
-          <label for="address-one-{{i}}">Full Address</label>
-          <input id="address-one-{{i}}" type="text" class="form-control app-font-color-attention" value="{{formCustomer.address}}" />
-        </div>
-        <div class="form-group app-form-section">
-          <label for="phone-{{i}}">Phone</label>
-          <input id="phone-{{i}}" name="phone" prefix="+1 " mask="(000) 000-0000" matinput type="tel"
-            class="form-control app-font-color-attention" [(ngModel)]="formCustomer.phone" />
+        <div class="form-group row">
+          <div class="col-6">
+            <div class="app-form-section">
+              <label for="address-one-{{i}}">Full Address</label>
+              <input id="address-one-{{i}}" type="text" class="form-control app-font-color-attention"
+                value="{{formCustomer.address}}" />
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="app-form-section">
+              <label for="phone-{{i}}">Phone</label>
+              <input id="phone-{{i}}" name="phone" prefix="+1 " mask="(000) 000-0000" matinput type="tel"
+                class="form-control app-font-color-attention" [(ngModel)]="formCustomer.phone" />
+            </div>
+          </div>
         </div>
         <hr>
         <div class="form-group row">
