--- a/web/ClientApp/src/app/customer/customers-component/customers.component.html
+++ b/web/ClientApp/src/app/customer/customers-component/customers.component.html
@@ -10,8 +10,13 @@
   </div>
 </div>
 <div class="accordion" id="customer-accordion">
-  <div class="customers-control-panel">
-    <span [appIcon]="plusIcon" [iconWidth]="'24px'"></span>
+  <div id="panel-rail">
+    <div id="customers-control-panel">
+      <button id="create-customer-button" class="user-action">
+        <span class="create-icon-wrapper" [appIcon]="plusIcon" [iconWidth]="'26px'" [iconHeight]="'26px'"></span>
+        <label id="create-customer-label">CUSTOMER</label>
+      </button>
+    </div>
   </div>
   <app-customer *ngFor="let customer of customers; let i = index; let isFirst = first" [index]="i" [isFirst]="isFirst"
     [customer]="customer">
