changed colors, tweaked note component

--- a/web/ClientApp/src/app/customer/customer-note/customer-note.component.css
+++ b/web/ClientApp/src/app/customer/customer-note/customer-note.component.css
@@ -7,3 +7,11 @@
 .note-attribution {
     display: inline-block;    
 }
+
+#section-header{
+    display: flex;
+}
+
+#section-header label{
+    margin:0;
+}
