--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -11,25 +11,27 @@
       <button [appIcon]="acceptIcon" class="user-action float-right">
       </button>
     </div>
-    <div id="collapse-{{index}}" class="collapse" aria-labelledby="headingOne" data-parent="#customer-accordion">
+    <div id="collapse-{{index}}" [ngClass]="{'show':expand}" class="collapse" aria-labelledby="headingOne"
+      data-parent="#customer-accordion">
       <div class="card-body">
         <div class="form-group row">
           <div class="col-4">
             <div class="app-form-section">
               <label>First Name</label>
-              <input type="text" class="form-control app-font-color-attention" value="{{formCustomer.givenName}}" />
+              <input [(ngModel)]="formCustomer.givenName" name="givenName" type="text" class="form-control" value="{{formCustomer.givenName}}" />
             </div>
           </div>
           <div class="col-4">
             <div class="app-form-section">
               <label>Last Name</label>
-              <input type="text" class="form-control app-font-color-attention" value="{{formCustomer.familyName}}" />
+              <input [(ngModel)]="formCustomer.familyName" name="familyName" type="text" class="form-control" value="{{formCustomer.familyName}}" />
             </div>
           </div>
           <div class="col-4">
             <div class="app-form-section">
               <label>Status</label>
-              <select class="form-control app-font-color-attention" [(ngModel)]="formCustomer.status" name="customerStatus">
+              <select class="form-control" [(ngModel)]="formCustomer.status"
+                name="customerStatus">
                 <option *ngFor="let status of statuses" [value]="status">{{status}}</option>
               </select>
             </div>
@@ -39,7 +41,7 @@
           <div class="col-6">
             <div class="app-form-section">
               <label for="address-one-{{i}}">Full Address</label>
-              <input id="address-one-{{i}}" type="text" class="form-control app-font-color-attention"
+              <input id="address-one-{{i}}" type="text" class="form-control"
                 value="{{formCustomer.address}}" />
             </div>
           </div>
@@ -47,14 +49,12 @@
             <div class="app-form-section">
               <label for="phone-{{i}}">Phone</label>
               <input id="phone-{{i}}" name="phone" prefix="+1 " mask="(000) 000-0000" matinput type="tel"
-                class="form-control app-font-color-attention" [(ngModel)]="formCustomer.phone" />
+                class="form-control" [(ngModel)]="formCustomer.phone" />
             </div>
           </div>
         </div>
-        <hr>
         <div class="form-group row">
           <div class="col-12">
-            <label>Notes</label>
             <app-customer-note [customerKey]="formCustomer.key"></app-customer-note>
           </div>
         </div>
