--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -55,7 +55,7 @@
         </div>
         <div class="form-group row">
           <div class="col-12">
-            <app-customer-note [customerKey]="formCustomer.key"></app-customer-note>
+            <app-customer-notes [customerKey]="formCustomer.key"></app-customer-notes>
           </div>
         </div>
       </div>
