--- a/web/ClientApp/src/app/customer/customer-notes/customer-notes.component.html
+++ b/web/ClientApp/src/app/customer/customer-notes/customer-notes.component.html
@@ -1,7 +1,7 @@
 <div class="app-form-section">
   <div id="section-header" class="mb-1">
     <label>Notes</label>
-    <button class="ml-2 create-button user-action" (click)="onNewCustomerClick()">
+    <button class="ml-2 create-button user-action" (click)="onNewNoteClick()">
       <span class="create-icon-wrapper" [appIcon]="plusIcon" [iconWidth]="'23px'" [iconHeight]="'23px'"></span>
     </button>
   </div>
@@ -9,8 +9,8 @@
     <div class="note-header">
       <span>{{note.createdOn | date:'short'}}</span>
       <div class="note-attribution ml-3">
-        <span class="mr-1">{{note.entrustedUser.givenName}}</span>
-        <span>{{note.entrustedUser.familyName}}</span>
+        <span class="mr-1">{{note.createdBy.givenName}}</span>
+        <span>{{note.createdBy.familyName}}</span>
       </div>
       <button [appIcon]="editIcon" (click)="onEditClick(note)" class="user-action ml-3"></button>
     </div>
