note editing form

--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -18,13 +18,13 @@
           <div class="col-4">
             <div class="app-form-section">
               <label>First Name</label>
-              <input [(ngModel)]="formCustomer.givenName" name="givenName" type="text" class="form-control" value="{{formCustomer.givenName}}" />
+              <input [(ngModel)]="formCustomer.givenName" placeholder="New" name="givenName" type="text" class="form-control" value="{{formCustomer.givenName}}" />
             </div>
           </div>
           <div class="col-4">
             <div class="app-form-section">
               <label>Last Name</label>
-              <input [(ngModel)]="formCustomer.familyName" name="familyName" type="text" class="form-control" value="{{formCustomer.familyName}}" />
+              <input [(ngModel)]="formCustomer.familyName" placeholder="Customer" name="familyName" type="text" class="form-control" value="{{formCustomer.familyName}}" />
             </div>
           </div>
           <div class="col-4">
