--- a/web/ClientApp/src/app/customer/customer-notes/customer-notes.component.html
+++ b/web/ClientApp/src/app/customer/customer-notes/customer-notes.component.html
@@ -2,24 +2,42 @@
   <div id="section-header" class="mb-1">
     <label>Notes</label>
     <button class="ml-2 create-button user-action" (click)="onNewNoteClick()">
-      <span class="create-icon-wrapper" [appIcon]="plusIcon" [iconWidth]="'23px'" [iconHeight]="'23px'"></span>
+      <span
+        class="create-icon-wrapper"
+        [appIcon]="plusIcon"
+        [iconWidth]="'23px'"
+      ></span>
     </button>
   </div>
   <div *ngFor="let note of notes">
     <div class="note-header">
-      <span>{{note.createdOn | date:'short'}}</span>
+      <span>{{ note.createdOn | date: 'short' }}</span>
       <div class="note-attribution ml-3">
-        <span class="mr-1">{{note.createdBy.givenName}}</span>
-        <span>{{note.createdBy.familyName}}</span>
+        <span class="mr-1">{{ note.createdBy.givenName }}</span>
+        <span>{{ note.createdBy.familyName }}</span>
       </div>
-      <button [appIcon]="editIcon" (click)="onEditClick(note)" class="user-action ml-3"></button>
+      <button
+        *ngIf="note.editable; else noteImmutableIcon"
+        [appIcon]="saveEditIcon"
+        [iconWidth]="'20px'"
+        (click)="onSaveEditClick(note)"
+        class="user-action ml-3"
+      ></button>
+      <ng-template #noteImmutableIcon>
+        <button
+          [appIcon]="editIcon"
+          [iconWidth]="'20px'"
+          (click)="onEditClick(note)"
+          class="user-action ml-3"
+        ></button>
+      </ng-template>
     </div>
     <div class="mt-2">
       <div *ngIf="note.editable; else noteImmutable">
-        <div [appQuill]="note.text"></div>
+        <div [appQuill]="note.text" (onChange)="note.onTextChange" ></div>
       </div>
       <ng-template #noteImmutable>
-        <div class="app-font-color-attention">{{note.text}}</div>
+        <div class="app-font-color-attention">{{ note.text }}</div>
       </ng-template>
     </div>
   </div>
