--- a/web/ClientApp/src/app/customer/customers-component/customers.component.html
+++ b/web/ClientApp/src/app/customer/customers-component/customers.component.html
@@ -12,7 +12,7 @@
 <div id="panel-rail">
   <div id="customers-control-panel">
     <button id="" class="create-button user-action" (click)="onNewCustomerClick()">
-      <span class="create-icon-wrapper" [appIcon]="plusIcon" [iconWidth]="'24px'" [iconHeight]="'24px'"></span>
+      <span class="create-icon-wrapper" [appIcon]="plusIcon" [iconWidth]="'24px'"></span>
       <label class="create-label">CUSTOMER</label>
     </button>
   </div>
