--- a/web/ClientApp/src/styles.css
+++ b/web/ClientApp/src/styles.css
@@ -36,7 +36,7 @@ body{
 .app-form-section input, 
 .app-form-section select,
 .app-form-section select option {
-  color: #26C281;
+  color: #5B09DC;
 }
 
 .create-icon-wrapper {
@@ -50,13 +50,13 @@ body{
 }
 
 .edit-icon path{
-  fill: #735CDD;
+  fill: #26C281;
 }
 
 .create-label {
   color: #26C281;
   margin: 0 0 0 .25rem;
-  height: 100%;
+  line-height: 1.1rem;
 }
 
 .create-label:hover{
