--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -1,38 +1,78 @@
 <div class="card">
   <form #customerForm_{{index}}="ngForm">
     <div class="card-header">
-      <a data-toggle="collapse" role="button" href="#collapse-{{index}}" aria-expanded="false">
-        <h5 class="m-0">{{formCustomer.givenName}} {{formCustomer.familyName}}</h5>
+      <a
+        data-toggle="collapse"
+        role="button"
+        href="#collapse-{{ index }}"
+        aria-expanded="false"
+      >
+        <h5 class="m-0">{{ customer.givenName }} {{ customer.familyName }}</h5>
       </a>
-      <button [appIcon]="deleteIcon" class="user-action float-right">
-      </button>
-      <button [appIcon]="cancelIcon" class="user-action float-right">
-      </button>
-      <button [appIcon]="acceptIcon" class="user-action float-right">
-      </button>
+      <div class="user-action-tray float-right">
+        <button
+          [appIcon]="acceptIcon"
+          [iconWidth]="'20px'"
+          class="user-action"
+        ></button>
+        <button
+          [appIcon]="cancelIcon"
+          [iconWidth]="'20px'"
+          class="user-action"
+        ></button>
+        <button
+          [appIcon]="deleteIcon"
+          [iconWidth]="'20px'"
+          class="user-action"
+        ></button>
+      </div>
     </div>
-    <div id="collapse-{{index}}" [ngClass]="{'show':expand}" class="collapse" aria-labelledby="headingOne"
-      data-parent="#customer-accordion">
+    <div
+      id="collapse-{{ index }}"
+      [ngClass]="{ show: expand }"
+      class="collapse"
+      aria-labelledby="headingOne"
+      data-parent="#customer-accordion"
+    >
       <div class="card-body">
         <div class="form-group row">
           <div class="col-4">
             <div class="app-form-section">
               <label>First Name</label>
-              <input [(ngModel)]="formCustomer.givenName" placeholder="New" name="givenName" type="text" class="form-control" value="{{formCustomer.givenName}}" />
+              <input
+                [(ngModel)]="customer.givenName"
+                placeholder="New"
+                name="givenName"
+                type="text"
+                class="form-control"
+                value="{{ customer.givenName }}"
+              />
             </div>
           </div>
           <div class="col-4">
             <div class="app-form-section">
               <label>Last Name</label>
-              <input [(ngModel)]="formCustomer.familyName" placeholder="Customer" name="familyName" type="text" class="form-control" value="{{formCustomer.familyName}}" />
+              <input
+                [(ngModel)]="customer.familyName"
+                placeholder="Customer"
+                name="familyName"
+                type="text"
+                class="form-control"
+                value="{{ customer.familyName }}"
+              />
             </div>
           </div>
           <div class="col-4">
             <div class="app-form-section">
               <label>Status</label>
-              <select class="form-control" [(ngModel)]="formCustomer.status"
-                name="customerStatus">
-                <option *ngFor="let status of statuses" [value]="status">{{status}}</option>
+              <select
+                class="form-control"
+                [(ngModel)]="customer.status"
+                name="customerStatus"
+              >
+                <option *ngFor="let status of statuses" [value]="status">{{
+                  status
+                }}</option>
               </select>
             </div>
           </div>
@@ -40,22 +80,36 @@
         <div class="form-group row">
           <div class="col-6">
             <div class="app-form-section">
-              <label for="address-one-{{i}}">Full Address</label>
-              <input id="address-one-{{i}}" type="text" class="form-control"
-                value="{{formCustomer.address}}" />
+              <label for="address-one-{{ i }}">Full Address</label>
+              <input
+                id="address-one-{{ i }}"
+                type="text"
+                class="form-control"
+                value="{{ customer.address }}"
+              />
             </div>
           </div>
           <div class="col-6">
             <div class="app-form-section">
-              <label for="phone-{{i}}">Phone</label>
-              <input id="phone-{{i}}" name="phone" prefix="+1 " mask="(000) 000-0000" matinput type="tel"
-                class="form-control" [(ngModel)]="formCustomer.phone" />
+              <label for="phone-{{ i }}">Phone</label>
+              <input
+                id="phone-{{ i }}"
+                name="phone"
+                prefix="+1 "
+                mask="(000) 000-0000"
+                matinput
+                type="tel"
+                class="form-control"
+                [(ngModel)]="customer.phone"
+              />
             </div>
           </div>
         </div>
-        <div class="form-group row">
+        <div class="form-group row" *ngIf="!customer.isNewCustomer">
           <div class="col-12">
-            <app-customer-notes [customerKey]="formCustomer.key"></app-customer-notes>
+            <app-customer-notes
+              [customerKey]="customer.key"
+            ></app-customer-notes>
           </div>
         </div>
       </div>
