--- a/web/ClientApp/src/app/customer/customers-component/customers.component.html
+++ b/web/ClientApp/src/app/customer/customers-component/customers.component.html
@@ -1,9 +1,15 @@
 <div class="view-header">
   <div class="people-header-section">
     <span class="mx-1">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+      >
         <path
-          d="M12 2c2.757 0 5 2.243 5 5.001 0 2.756-2.243 5-5 5s-5-2.244-5-5c0-2.758 2.243-5.001 5-5.001zm0-2c-3.866 0-7 3.134-7 7.001 0 3.865 3.134 7 7 7s7-3.135 7-7c0-3.867-3.134-7.001-7-7.001zm6.369 13.353c-.497.498-1.057.931-1.658 1.302 2.872 1.874 4.378 5.083 4.972 7.346h-19.387c.572-2.29 2.058-5.503 4.973-7.358-.603-.374-1.162-.811-1.658-1.312-4.258 3.072-5.611 8.506-5.611 10.669h24c0-2.142-1.44-7.557-5.631-10.647z" />
+          d="M12 2c2.757 0 5 2.243 5 5.001 0 2.756-2.243 5-5 5s-5-2.244-5-5c0-2.758 2.243-5.001 5-5.001zm0-2c-3.866 0-7 3.134-7 7.001 0 3.865 3.134 7 7 7s7-3.135 7-7c0-3.867-3.134-7.001-7-7.001zm6.369 13.353c-.497.498-1.057.931-1.658 1.302 2.872 1.874 4.378 5.083 4.972 7.346h-19.387c.572-2.29 2.058-5.503 4.973-7.358-.603-.374-1.162-.811-1.658-1.312-4.258 3.072-5.611 8.506-5.611 10.669h24c0-2.142-1.44-7.557-5.631-10.647z"
+        />
       </svg>
     </span>
     <h4>People</h4>
@@ -11,17 +17,26 @@
 </div>
 <div id="panel-rail">
   <div id="customers-control-panel">
-    <button id="" class="create-button user-action" (click)="onNewCustomerClick()">
-      <span class="create-icon-wrapper" [appIcon]="plusIcon" [iconWidth]="'24px'"></span>
+    <button
+      id=""
+      class="create-button user-action"
+      (click)="onNewCustomerClick()"
+    >
+      <span
+        class="create-icon-wrapper"
+        [appIcon]="plusIcon"
+        [iconWidth]="'24px'"
+      ></span>
       <label class="create-label">CUSTOMER</label>
     </button>
   </div>
 </div>
 <div class="accordion" id="customer-accordion">
-  <app-customer [expand]='true' [customer]="createNewCustomerShell()" *ngIf="createCustomer">
-
-  </app-customer>
-  <app-customer *ngFor="let customer of customers; let i = index; let isFirst = first" [index]="i"
-    [customer]="customer">
+  <app-customer [expand]="true" *ngIf="createCustomer"> </app-customer>
+  <app-customer
+    *ngFor="let customer of customers; let i = index; let isFirst = first"
+    [index]="i"
+    [customer]="customer"
+  >
   </app-customer>
 </div>
