--- a/web/ClientApp/src/styles.css
+++ b/web/ClientApp/src/styles.css
@@ -3,12 +3,16 @@
   background-color: #8302c5f5;
 }
 
-html{
+html {
   height: 100%;
 }
 
-body{
+body {
   height: 100%;
+}
+
+.user-action-tray {
+  display: inline-block;
 }
 
 .user-action {
@@ -21,7 +25,7 @@ body{
 }
 
 .user-action:focus {
-  outline: none;    
+  outline: none;
 }
 
 .app-form-section {
@@ -29,42 +33,53 @@ body{
   padding: 1rem;
 }
 
-.app-form-section label{
+.app-form-section label {
   font-weight: 400;
 }
 
-.app-form-section input, 
+.app-form-section input,
 .app-form-section select,
 .app-form-section select option {
-  color: #5B09DC;
+  color: #5b09dc;
 }
 
 .create-icon-wrapper {
   display: inline-flex;
-  background-color: #26C281;
+  background-color: #26c281;
   border-radius: 24px;
+}
+
+.accept-icon {
+  fill: #26c281;
+}
+
+.cancel-icon path {
+  fill: #ff006e;
 }
 
 .create-icon path {
   fill: white;
 }
 
-.edit-icon path{
-  fill: #26C281;
+.delete-icon path {
+  fill: #ff006e;
+}
+
+.edit-icon path {
+  fill: #5b09dc;
 }
 
 .create-label {
-  color: #26C281;
-  margin: 0 0 0 .25rem;
+  color: #26c281;
+  margin: 0 0 0 0.25rem;
   line-height: 1.1rem;
 }
 
-.create-label:hover{
-    cursor: pointer;
+.create-label:hover {
+  cursor: pointer;
 }
 
 .create-button {
-    display: inline-flex;
-    align-items: center;
+  display: inline-flex;
+  align-items: center;
 }
-
