front end write customer

--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -26,6 +26,7 @@
             [appIcon]="acceptIcon"
             [iconWidth]="'20px'"
             class="user-action"
+            (click)="onSaveEditClick()"
           ></button>
           <button
             [appIcon]="cancelIcon"
