delete notes, soft delete customers

--- a/web/ClientApp/src/app/customer/customer-component/customer.component.html
+++ b/web/ClientApp/src/app/customer/customer-component/customer.component.html
@@ -40,6 +40,7 @@
             [appIcon]="deleteIcon"
             [iconWidth]="'20px'"
             class="user-action"
+            (click)="onDeleteCustomerClick()"
           ></button>
         </ng-template>
       </div>
