--- a/web/ClientApp/src/app/customer/customer-notes/customer-notes.component.html
+++ b/web/ClientApp/src/app/customer/customer-notes/customer-notes.component.html
@@ -42,7 +42,7 @@
           <button
             [appIcon]="deleteNoteIcon"
             [iconWidth]="'20px'"
-            (click)="onRemoveNoteClick(note)"
+            (click)="onDeleteNoteClick(note)"
             class="user-action ml-3"
           ></button>
         </div>
