changed red color

--- a/web/ClientApp/src/styles.css
+++ b/web/ClientApp/src/styles.css
@@ -54,7 +54,7 @@ body {
 }
 
 .cancel-icon path {
-  fill: #ff006e;
+  fill: #FF101F;
 }
 
 .create-icon path {
@@ -62,7 +62,7 @@ body {
 }
 
 .delete-icon path {
-  fill: #ff006e;
+  fill: #FF101F;
 }
 
 .edit-icon path {
